# moodle-cli

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/moodle_cli/: __init__.py  __main__.py
src/moodle_cli/cli/: assign.py  auth.py  calendar.py  call.py  cohort.py  completion.py  course.py  enrol.py  file.py  forum.py  grade.py  main.py  message.py  quiz.py  role.py  site.py  user.py
src/moodle_cli/client/: __init__.py  exceptions.py  http.py
src/moodle_cli/config/: __init__.py  auth.py  manager.py
src/moodle_cli/output/: __init__.py  console.py  json.py  tables.py
src/moodle_cli/services/: __init__.py  assign.py  base.py  calendar.py  cohort.py  completion.py  course.py  enrol.py  file.py  forum.py  grade.py  message.py  quiz.py  role.py  site.py  user.py
tests/: conftest.py
tests/fixtures/responses/: auth_token.json  courses.json  site_info.json
tests/test_cli/: test_auth.py  test_main.py
tests/test_client/: test_exceptions.py  test_http.py
tests/test_services/: test_course.py  test_site.py
