[project]
name = "moodle-cli"
version = "0.1.0"
description = "A Python CLI for Moodle Web Services"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "pydantic>=2.0",
    "rich>=13.0",
    "keyring>=25.0",
    "tomli-w>=1.0",
]

[project.scripts]
moodle = "moodle_cli.cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/moodle_cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
src = ["src"]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["moodle_cli"]
mypy_path = "src"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "respx>=0.22",
    "ruff>=0.8",
    "mypy>=1.13",
]
